Add Execution and ExecutionType handlers.
